# voronoi

./: .gitignore  Cargo.toml  README.rst
.cargo/: config
isolated/partialord/: Cargo.toml  generated.rs
isolated/partialord/src/: main.rs
isolated/threading/: Cargo.toml
isolated/threading/src/: main.rs
resources/imgs/: credit.txt
src/: argparse.rs  assign.rs  benchmark.rs  color.rs  colorset.rs  dims.rs  distribute.rs  find_index.rs  grouping.rs  img.rs  main.rs  nearest_within_box.rs  norms.rs  paint.rs  parmap.rs  point.rs  pointid.rs  points.rs  pointset.rs  test_util.rs  util.rs  voronoi.rs
