cargo-features = ["profile-overrides"]

[package]
name = "voronoiify-image"
description = "Divide a PNG image into random nearest-neighbour regions and give each regio the average color of its pixels"
license = "Apache-2.0"
repository = "https://github.com/mverleg/voronoi"
version = "1.0.3"
authors = ["Mark <mverleg.noreply@gmail.com>"]
default-run = "voronoi"
edition = "2018"

[lib]
name = "vorolib"
path = "src/voronoi.rs"

[[bin]]
name = "voronoi"
path = "src/main.rs"

[[bin]]
name = "voronoi-benchmark"
path = "src/benchmark.rs"

[features]
default = []
flame_it = ["flame", "flamer"]
log_it = []

[profile.release]
opt-level = 3
debug = true  # TODO @mark: TEMPORARY! REMOVE THIS!
#TODO @mark: temporary:
#lto = true
#codegen-units = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release.package."*"]
opt-level = 3
debug = true

[dependencies]
image = "0.23.0-preview.0"
rand = "0.7.2"
scoped-pool = "1.0.0"
num_cpus = "1.11.1"
clap = "2.33.0"
byteorder = "1.3.2"
separator = "0.4.1"
flame = { version = "0.2.2", optional = true }
flamer = { version = "0.4.0", optional = true }
